--- a/css/main-style.css
+++ b/css/main-style.css
@@ -715,3 +715,128 @@ ul {
     background: #000000;
     letter-spacing: 4px;
 }
+/* -------------------instagram -------------------*/
+
+.instagram{
+    margin-top: 100px;
+}
+
+.instagram_img {
+    box-sizing: border-box;
+    width: 65%;
+    padding: 0 10px;
+}
+
+.instagram__img__item {
+    width: 33.333%;
+    height: 260px;
+}
+
+.instagram_content {
+    box-sizing: border-box;
+    width: 35%;
+    padding: 130px 0  0 25px;
+}
+
+.instagram_content h2 {
+    font-size: 36px;
+}
+
+.instagram_content p {
+    margin-top: 30px;
+    margin-bottom: 65px;
+    font-size: 16px;
+    color: #3d3d3d;
+}
+
+.instagram_content h3 {
+    font-size: 30px;
+    color: rgb(229, 54, 55);
+}
+
+/* --------------------latest new--------------------- */
+
+.latest--new {
+    margin-top: 30px;
+}
+
+.latest--new-title {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.latest--new-title h6{
+    font-size: 14px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: #e53637;
+    margin-bottom: 15px;
+}
+
+.latest--new-title h2 {
+    color: #111111;
+    font-weight: 700;
+    line-height: 46px;
+    font-size: 36px;
+}
+
+.blog_item {
+    box-sizing: border-box;
+    width: 33.333%;
+    padding: 0 10px;
+}
+
+.blog_bg {
+    height: 270px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.blog_content {
+    margin: 0 30px;
+    padding: 30px 30px 25px;
+    margin-top: -35px;
+    background-color: #ffffff;
+}
+
+.blog_content span {
+    color: #3d3d3d;
+    font-size: 13px;
+    margin-bottom: 10px;
+}
+
+.blog_content h5 {
+    color: #0d0d0d;
+    font-weight: 700;
+    line-height: 28px;
+    margin-bottom: 10px;
+    font-size: 18px;
+}
+
+.blog_content a {
+    display: inline-block;
+    color: #111111;
+    font-size: 13px;
+    font-weight: 700;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    padding: 3px 0;
+    position: relative;
+}
+
+.blog_content a::after{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background: #111111;
+    content: "";
+    transition: all, 0.3s;
+}
+
+.blog_item:hover .blog_content a::after{
+    width: 40%;
+    background-color: #e53637;
+}
