--- a/css/main-style.css
+++ b/css/main-style.css
@@ -199,6 +199,31 @@ ul {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center top;
+    position: relative;
+}
+
+.arow_left {
+    position: absolute;
+    top: 50%;
+    left: 50px;
+}
+
+.arow_left i {
+    font-size: 25px;
+}
+
+.arow_right {
+    position: absolute;
+    top: 50%;
+    right: 50px;
+}
+
+.arow_right i {
+    font-size: 25px;
+}
+
+.arow_l i {
+    font-size: 25px;
 }
 
 .content {
@@ -236,7 +261,7 @@ ul {
 }
 
 .click_buy {
-    padding: 14px 30px;
+    padding: 15px 35px;
     background-color: #111111;
     display: inline-block;
 }
@@ -254,7 +279,15 @@ ul {
     font-size: 13px;
 }
 
+.icon_social {
+    margin-top: 180px;
+}
 
+
+.icon_social i {
+    margin-right: 30px;
+    font-size: 14px;
+}
    /* ------------------------------banner------------------------*/
 .banner {
     padding: 100px 0;
@@ -839,4 +872,98 @@ ul {
 .blog_item:hover .blog_content a::after{
     width: 40%;
     background-color: #e53637;
+}
+
+.footer {
+    margin-top: 55px;
+    padding-top: 70px;
+    background-color: #111111;
+
+}
+
+.footer__about {
+    box-sizing: border-box;
+    width: 36%;
+    padding-right: 150px;
+}
+
+.footer__about p {
+    margin: 30px 0;
+}
+
+.footer__widget {
+    box-sizing: border-box;
+    width: 17%;
+}
+
+.footer__widget a {
+    display: block;
+    margin-bottom: 15px;
+}
+
+.footer_gmail {
+    box-sizing: border-box;
+    width: 30%;
+    padding-left: 90px;
+}
+
+.footer_gmail p {
+    margin-bottom: 20px;
+}
+
+.form_submit{
+    box-sizing: border-box;
+    position: relative;
+}
+
+.footer_gmail input {
+    border: none;
+    background-color: transparent;
+    padding: 15px 0;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.footer_gmail button {
+    background: transparent;
+    border: none;
+    position: absolute;
+    top: 15px;
+    right: 5px;
+}
+
+.footer_gmail button i {
+    color: #b7b7b7;
+    font-size: 16px;
+}
+
+.form_submit {
+    border-bottom: 2px solid white;
+}
+
+.footer h2 {
+    color: #ffffff;
+    font-size: 15px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    margin-bottom: 20px;
+}
+
+.footer p,
+.footer a {
+    font-size: 15px;
+    color: #b7b7b7;
+}
+
+.footer__copyright {
+    margin-top: 60px;
+    text-align: center;
+    padding: 20px 0;
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.footer__copyright i,
+.footer__copyright a {
+    color: #e53637;
 }
